--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ jar {
 }
 
 bootRepackage {
-    mainClass = 'org.gradle.MyVoteConfig'
+    mainClass = 'com.cmpe273.controller.SpringConfig'
 }
 
 repositories {
